# lit-auth

./: .gitignore  Cargo.toml  README.md  README_CN.md
html/: login.html  register.html
migrations/: 20250829_init.sql
src/: api.rs  config.rs  db.rs  error.rs  main.rs  statics.rs
