[package]
name = "lit-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
argon2 = "0.5"
cookie = "0.18"
atlas = { path = "../atlas" }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
redis = { version = "1.2.0", features = ["tokio-comp"] }
ulid = "1.2.1"
tower-http = { version = "0.6.8", features = ["fs"] }

