[package]
name = "lit-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
argon2 = "0.6.0-rc.8"
cookie = "0.18"
ulid = "1.2.1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
atlas = { path = "../atlas" }

